# FMVS

./: CMakeLists.txt
config/CC3M/delete/: build_config.json  change_config.json  query_config.json
config/CC3M/insert/: build_config.json  change_config.json  query_config.json
config/Openimage/DEG/delete/: change_config.json
config/Openimage/DEG/insert/: build_config.json
config/Openimage/FMVS/delete/: build_config.json  query_config.json
config/Openimage/FMVS/insert/: query_config.json
config/Openimage/insert/: change_config.json
config/sift/delete/: build_config.json  change_config.json  query_config.json
config/sift/insert/: build_config.json  insert_config.json  query_config.json
include/: FIO.hpp  Graph.hpp  Prune.hpp  Utils.hpp  VectorList.hpp  fmvs_algorithms.hpp  pareto_search.hpp
script/: create_LR.py  create_alpha.py  create_headstone.py  gen_labels.py  get_delete.py  get_vector.py  merge_fvecs.py  run_query.py  split_fvecs.py  split_labels.py  split_pairs_fvecs.py  test_json.py  test_vector.py
src/: build.cpp  build_deg_graph.cpp  build_fmvs_graph.cpp  change.cpp  delete_fmvs_graph.cpp  fmvs_beam_search.cpp  fmvs_search.cpp  insert_fmvs_graph.cpp  main.cpp  pareto_search.cpp  query.cpp
